new part of report and lab 5 done

--- a/ER-model/report/Sample.tex
+++ b/ER-model/report/Sample.tex
@@ -7,7 +7,6 @@
 %%  Стандартные языковые команды
 \usepackage[cp1251]{inputenc}
 \usepackage[russian]{babel}
-%\usepackage[T2A]{fontenc}   %  это устанавливается авторматически
 
 %%  Подключение стилевого файла отчета
 \usepackage{kprj}
@@ -32,64 +31,40 @@
 %%%    Тип работы
 \LabWork                      %   тип документа -- лабораторная работа
 \LabWorkNo{1}                 %   номер лабораторной работы
-%\variant{17}                   %   вариант лабораторной
-%\KursWork
-%\KursProject
-%\NIR
-%\VKR
-%\NKR
-
 
 %%%  Данные для оформления
-
 \author{Д.Д.~Девяткин}                     %   автор
-%\authorfull{Курош Владимир Витальевич}  %   автор -- Фамилия, Имя, Отчество
 \workyear{2022}                         %   год выполнения работы
 \title{Модель entity relation}   %  название
 \discipline{Практикум по базам данных}              %  учебная дисциплина
 \group{ФН12-21М}                         %   группа
 \faculty{Фундаментальные науки}         %   Факультет
-%\facultyshort{ФН}                       %   Факультет -- аббревиатура
 \chair{Математическое моделирование}    %   кафедра
-%\chairno{ФН-12}                         %   кафедра -- аббревиатура
-%\chairhead{А.П.~Крищенко}               %   зав. кафедрой
-\chief{И.Э.~Вишняков}                     %   Руководитель работы
-%\consultant{А.В.~Макаренко}               %   Консультант (если нужно)
-% \inspector{Б.О.~Волков}                 %   Нормоконтролер
-%\trend{учебная}                         %   Направление работы (указывается в задании)
-%\themesource{кафедра}                   %   Источник темы (указывается в задании)
 
-\equationnumbering{section}             %   если нумерация формул в пределах раздела (иначе единая нумерация)
-%\figurenumbering{section}              %   (аналогично для рисунков)
-%%%   Оформление содержания, в текст вставлять командой \tableofcontents
-%\SkipContentsbreak                     %   Подавление разрыва страницы после содержания
-%\setcontentsname{Оглавление}           %   Заголовок содержания
-%\def\contsectionfont{\bfseries}        %   шрифт для разделов в содержании
-%\def\contsubsectionfont{\sf}           %   шрифт для подразделов в содержании
-%\setcounter{secnumdepth}{1}            %   глубина заголовков в содержании
+
+\equationnumbering{section}
 
 \begin{document}
 
 %%%   Формирование титульного листа
 \maketitle
 %  Для формирования содержания
-\tableofcontents
+%\tableofcontents
 
 \section{Постановка задачи}
 Целью данной лабораторной работы является изучение метода моделирования данных «сущность-связь» и реализация этой модели.
 
-Для решения этой задачи, еобходимо сделать следующее:
+Для решения этой задачи, необходимо сделать следующее:
 
 \begin{enumerate}
 	\item выбрать предметную область, соответствующую 4-5 сущностям;
 	\item cформировать требования к предметной области;
 	\item cоздать модель «сущность-связь» для предметной области с
-обоснованием выбора кардинальных чисел связей.
-
+обоснованием выбора кардинальных чисел связей;
+	\item преобразовать модель «сущность-связь» в реляционную модель и обосновать выбор типов данных, ключей, правил обеспечения ограничений минимальной кардинальности.
 \end{enumerate}
 
-\section{Релизация}
-
+\section{Модель «сущность-связь»}
 В качестве предметной области была выбрана область авиарейсов. Данная область подразумевает взаимодействие покупателей авиабилетов и рейса с авиабилетами. Так же у каждого рейса имеется своя модель самолета. В связи с этим к предметной области были сформулированы следующие требования:
 
 \begin{enumerate}
@@ -117,8 +92,47 @@
 
 Между описанными сущностями были построены связи, согласующиеся с
 принципами предметной области, описанными ранее. описанными ранее. Так как каждый покупатель может купить билеты на разных людей, но у каждого
-билета должен быть только один владелец, то связь сущностей Customer и Tickets «один-ко-многим», а минимальные и максимальные кардинальные числа равны 1:1 и 0:N. Аналогичная связь между сущностями Aircrafts и Aircrafts, так как одному рейсу обязательно соответствует единственный самолет, но для каждого самолета может быть реализовано несколько полетов. Между сущностями Flights и Tickets так же связь «один-ко-многим», однако кардинальные числа равны 1:1 и 1:N, так билету должен быть присвоен 1 и только 1 рейс, а у рейса может быть 1 или более авиабилетов.
+билета должен быть только один владелец, то связь сущностей Customer и Tickets «один-ко-многим», а минимальные и максимальные кардинальные числа равны 1:1 и 0:N. Аналогичная связь между сущностями Flights и Aircrafts так как одному рейсу обязательно соответствует единственный самолет и между сущностями Flights и Tickets.
+\newpage
+\section{Реляционная модель}
+Для сущностей выбираются первичные ключи. Для сущностей Tickets, Aircrafts и Customer в качестве первичного ключа выбираются идентификаторы. Для сущности Flights вводится сурогатный ключ FID. Реляционная модель представлена на рис. 2.
 
+\begin{figure}[h!]
+  \centerline{\includegraphics[scale=1]{rel-mod.png}}
+  \vskip2mm
+  \caption{Реляционная модель данных.}\label{rel_model}
+\end{figure}
+
+Нормализация не требуется, так как удовлетворяет условиям БКНФ (нормальной формы Бойса-Кодда).
+
+Далее определялись типы данных для столбцов таблиц, соответствующие требованиям к предметной области.
+\begin{figure}[h]
+\begin{minipage}[h]{0.49\linewidth}
+\center{\includegraphics[width=8cm]{customer_type.png}}
+\end{minipage}
+\begin{minipage}[h]{0.49\linewidth}
+\center{\includegraphics[width=8cm]{aircrafts_type.png}}
+\end{minipage}
+\end{figure}
+\begin{figure}[h]
+\begin{minipage}[h]{0.49\linewidth}
+\center{\includegraphics[width=8cm]{flight_type.png}}
+\end{minipage}
+\begin{minipage}[h]{0.49\linewidth}
+\center{\includegraphics[width=8cm]{ticket_type.png}}
+\end{minipage}
+\end{figure}
+
+Правила обеспечения ограничения минимальной кардинальности, также диктуются требованиями предметной области.
+
+\begin{figure}[h!]
+  \centerline{\includegraphics[scale=0.97]{min_card_1.png}}
+\end{figure}
+
+\begin{figure}[h!]
+  \centerline{\includegraphics[scale=0.97]{min_card_2.png}}
+  \vskip2mm
+  \caption{Обеспечение минимальнйо кардинальности.}\label{rel_model}
+\end{figure}
 
 \end{document}
-
